--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/redmondmj/Covid-19-Data-Project.git"
+    "url": "git+https://github.com/redmondmj/Covid-19.git"
   },
   "keywords": [
     "Covid-19",
@@ -20,9 +20,9 @@
   "author": "Matt Redmond (Thanks to cobra_winfrey)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/redmondmj/Covid-19-Data-Project/issues"
+    "url": "https://github.com/redmondmj/Covid-19/issues"
   },
-  "homepage": "https://github.com/redmondmj/Covid-19-Data-Project#readme",
+  "homepage": "https://github.com/redmondmj/Covid-19#readme",
   "dependencies": {
     "node-sass": "^4.13.1"
   }
